--- a/t20.css
+++ b/t20.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'bkrsfttormenta20-regularRg';
+    font-family: 't20';
     src: url('tormenta-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
